--- a/index.css
+++ b/index.css
@@ -1,14 +1,53 @@
+body {
+    background-color: darkslategrey;
+    margin: 0;
+    color: white;
+}
+
+
 #title {
-    font-weight: bold;
     text-align: center;
+    font-weight: bold;
+    margin-bottom: 0px;
+    font-size: 3em;
+}
+
+#title2 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 0px;
+}
+
+.pic1 {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 600px;
+}
+
+figcaption {
+    font-size: 15px;
+}
+
+#tribute-info {
+    font-size: 20px;
+    text-align: center;  
 }
 
 #main {
+    width: 100%;
+    max-width: 992px;
+    margin: 0 auto;
     text-align: center;
+    position:relative;
+    font-family: 'Arial', Helvetica, sans-serif;
 }
 
-#image {
-    width: 400px; 
-    height: 250px;
+.info ul {
+    list-style: inside;
 }
 
+a {
+    color: green;
+}
